--- a/src/main/resources/assets/corgimod/lang/en_us.json
+++ b/src/main/resources/assets/corgimod/lang/en_us.json
@@ -1,15 +1,17 @@
 {
   "itemGroup.corgimod_spawneggs": "Corgi Spawn Eggs",
+  "item.corgimod.spawn_egg_corgi_normal": "Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_anti": "Anti Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_bodyguard": "Bodyguard Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_business": "Business Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_creeper": "Creeper Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_love": "Love Corgi Spawn Egg",
-  "item.corgimod.spawn_egg_corgi_normal": "Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_zombie": "Zombie Corgi Spawn Egg",
+  "entity.corgimod.corgi_normal": "Corgi",
   "entity.corgimod.corgi_anti": "Anti Corgi",
   "entity.corgimod.corgi_bodyguard": "Bodyguard Corgi",
   "entity.corgimod.corgi_business": "Business Corgi",
   "entity.corgimod.corgi_creeper": "Creeper Corgi",
   "entity.corgimod.corgi_love": "Love Corgi",
-  "entity.corgimod.corgi_normal": "Corgi"
+  "entity.corgimod.corgi_zombie": "Zombie Corgi"
 }
