Implementing all old redone models and renderers.

--- a/src/main/resources/assets/corgimod/lang/en_us.json
+++ b/src/main/resources/assets/corgimod/lang/en_us.json
@@ -5,13 +5,31 @@
   "item.corgimod.spawn_egg_corgi_bodyguard": "Bodyguard Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_business": "Business Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_creeper": "Creeper Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_fabbe50": "fabbe50 Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_hero": "Hero Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_love": "Love Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_melon": "Melon Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_nerd": "Nerd Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_pirate": "Pirate Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_radioactive": "Radioactive Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_skeleton": "Skeleton Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_spy": "Spy Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_sunglasses": "Sunglasses Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_zombie": "Zombie Corgi Spawn Egg",
   "entity.corgimod.corgi_normal": "Corgi",
   "entity.corgimod.corgi_anti": "Anti Corgi",
   "entity.corgimod.corgi_bodyguard": "Bodyguard Corgi",
   "entity.corgimod.corgi_business": "Business Corgi",
   "entity.corgimod.corgi_creeper": "Creeper Corgi",
+  "entity.corgimod.corgi_fabbe50": "fabbe50 Corgi",
+  "entity.corgimod.corgi_hero": "Hero Corgi",
   "entity.corgimod.corgi_love": "Love Corgi",
+  "entity.corgimod.corgi_melon": "Melon Corgi",
+  "entity.corgimod.corgi_nerd": "Nerd Corgi",
+  "entity.corgimod.corgi_pirate": "Pirate Corgi",
+  "entity.corgimod.corgi_radioactive": "Radioactive Corgi",
+  "entity.corgimod.corgi_skeleton": "Skeleton Corgi",
+  "entity.corgimod.corgi_spy": "Spy Corgi",
+  "entity.corgimod.corgi_sunglasses": "Sunglasses Corgi",
   "entity.corgimod.corgi_zombie": "Zombie Corgi"
 }
