--- a/src/main/resources/assets/corgimod/lang/en_us.json
+++ b/src/main/resources/assets/corgimod/lang/en_us.json
@@ -36,5 +36,15 @@
   "entity.corgimod.corgi_skeleton": "Skeleton Corgi",
   "entity.corgimod.corgi_spy": "Spy Corgi",
   "entity.corgimod.corgi_sunglasses": "Sunglasses Corgi",
-  "entity.corgimod.corgi_zombie": "Zombie Corgi"
+  "entity.corgimod.corgi_zombie": "Zombie Corgi",
+
+  "text.autoconfig.corgimod.title": "The Corgi Mod",
+  "text.autoconfig.corgimod.option.general": "General",
+  "text.autoconfig.corgimod.option.general.showCorgiDefaultNames": "Default Names",
+  "text.autoconfig.corgimod.option.general.enableWorkInProgressFeatures": "Enable WIP Features",
+  "text.autoconfig.corgimod.option.general.corgiParticleEffects": "Corgi Particle Effects",
+  "text.autoconfig.corgimod.option.corgiAbilities": "Corgi Abilities",
+  "text.autoconfig.corgimod.option.corgiAbilities.loveCorgiEffectRange": "Love Corgi Effect Range",
+  "text.autoconfig.corgimod.option.corgiAbilities.loveCorgiMaxEntityCount": "Love Corgi Max Entity Count",
+  "text.autoconfig.corgimod.option.corgiAbilities.pirateCorgiBoatSpeed": "Pirate Corgi Boat Speed"
 }
