--- a/src/main/resources/assets/corgimod/lang/en_us.json
+++ b/src/main/resources/assets/corgimod/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.corgimod_spawneggs": "Corgi Spawn Eggs",
+  "itemGroup.corgimod.spawneggs": "Corgi Spawn Eggs",
 
   "item.corgimod.spawn_egg_corgi_normal": "Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_anti": "Anti Corgi Spawn Egg",
