Update Corgi model & Added missing translations

--- a/src/main/resources/assets/corgimod/lang/en_us.json
+++ b/src/main/resources/assets/corgimod/lang/en_us.json
@@ -47,4 +47,7 @@
   "text.autoconfig.corgimod.option.corgiAbilities.loveCorgiEffectRange": "Love Corgi Effect Range",
   "text.autoconfig.corgimod.option.corgiAbilities.loveCorgiMaxEntityCount": "Love Corgi Max Entity Count",
   "text.autoconfig.corgimod.option.corgiAbilities.pirateCorgiBoatSpeed": "Pirate Corgi Boat Speed"
+  "text.autoconfig.corgimod.option.corgiAbilities.pirateCorgiBoatSpeed": "Pirate Corgi Boat Speed",
+  "text.autoconfig.corgimod.option.corgiAbilities.spyCorgiRange": "Spy Corgi Reveal Range",
+  "text.autoconfig.corgimod.option.corgiAbilities.spyCorgiExposeTime": "Spy Corgi Reveal Time"
 }
