Added parental breeding mode

--- a/src/main/resources/assets/corgimod/lang/en_us.json
+++ b/src/main/resources/assets/corgimod/lang/en_us.json
@@ -48,6 +48,9 @@
   "text.autoconfig.corgimod.option.general.namingMode.@Tooltip[2]": "Off: Disables the auto-naming completely. Corgis can still be named. Vanilla behavior.",
   "text.autoconfig.corgimod.option.general.enableWorkInProgressFeatures": "Enable WIP Features",
   "text.autoconfig.corgimod.option.general.corgiParticleEffects": "Corgi Particle Effects",
+  "text.autoconfig.corgimod.option.general.breedingMode": "Breeding Mode",
+  "text.autoconfig.corgimod.option.general.breedingMode.@Tooltip[0]": "Parents: Breeding two corgis together spawns a child based on one of the parents.",
+  "text.autoconfig.corgimod.option.general.breedingMode.@Tooltip[1]": "Random: Breeding two corgis together spawns a completely random child corgi.",
   "text.autoconfig.corgimod.option.corgiAbilities": "Corgi Abilities",
   "text.autoconfig.corgimod.option.corgiAbilities.loveCorgiEffectRange": "Love Corgi Effect Range",
   "text.autoconfig.corgimod.option.corgiAbilities.loveCorgiMaxEntityCount": "Love Corgi Max Entity Count",
