Random Corgi Spawn Egg

--- a/src/main/resources/assets/corgimod/lang/en_us.json
+++ b/src/main/resources/assets/corgimod/lang/en_us.json
@@ -18,6 +18,7 @@
   "item.corgimod.spawn_egg_corgi_spy": "Spy Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_sunglasses": "Sunglasses Corgi Spawn Egg",
   "item.corgimod.spawn_egg_corgi_zombie": "Zombie Corgi Spawn Egg",
+  "item.corgimod.spawn_egg_corgi_random": "Random Corgi Spawn Egg",
 
   "item.corgimod.uranium": "Uranium",
   "item.corgimod.sunglasses": "Sunglasses",
